--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <span>دنبال کنید:</span>
                 <ul class="list-inline d-inline-block mb-0">
                   <li class="list-inline-item">
-                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-instagram">111</i>
                   </li>
                   <li class="list-inline-item">
                     <i class="fa-brands fa-telegram"></i>
